--- a/registrationUsers.html
+++ b/registrationUsers.html
@@ -90,6 +90,9 @@
                   >Панель администратора</a
                 >
               </li>
+              <li class="nav-item">
+                <a class="nav-link text-danger" href="/src/logout.php">Выйти</a>
+              </li>
             </ul>
           </div>
         </div>
