--- a/registrationUsers.html
+++ b/registrationUsers.html
@@ -6,7 +6,6 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
     <title>Форма регистрации</title>
@@ -32,32 +31,12 @@
         text-align: center;
         color: #333;
       }
-      .form-group {
-        margin-bottom: 15px;
-      }
-      label {
-        display: block;
-        font-weight: bold;
-        color: #333;
-        margin-bottom: 5px;
-      }
-      input[type="text"],
-      input[type="password"],
-      select {
-        width: 100%;
-        padding: 10px;
-        border-radius: 5px;
-        border: 1px solid #ccc;
-        font-size: 16px;
-      }
     </style>
   </head>
   <body>
     <nav class="navbar navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/src/admin_panel.php"
-          >Навигационная панель</a
-        >
+        <a class="navbar-brand" href="/src/admin_panel.php">Навигационная панель</a>
         <button
           class="navbar-toggler text-align: right"
           type="button"
@@ -75,7 +54,9 @@
           aria-labelledby="offcanvasDarkNavbarLabel"
         >
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Завод</h5>
+            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
+              Завод
+            </h5>
             <button
               type="button"
               class="btn-close btn-close-white"
@@ -86,14 +67,11 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link" href="/src/admin_panel.php"
-                  >Панель администратора</a
-                >
+                <a class="nav-link" href="/src/admin_panel.php">Панель администратора</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-danger" href="/src/logout.php">Выйти</a>
-              </li>
-            </ul>
+              </li> 
           </div>
         </div>
       </div>
@@ -101,30 +79,105 @@
     <div class="form-container">
       <h2>Регистрация работников</h2>
       <form action="/src/registration.php" method="post">
-        <div class="form-group">
+        <div class="form-group mb-3">
           <label for="login">Логин</label>
-          <input type="text" id="login" name="login" required />
+          <input
+            type="text"
+            id="login"
+            name="login"
+            class="form-control"
+            required
+          />
         </div>
-        <div class="form-group">
+        <div class="form-group mb-3">
           <label for="role">Роль</label>
-          <input type="text" id="role" name="role" required />
+          <input
+            type="text"
+            id="role"
+            name="role"
+            class="form-control"
+            required
+          />
         </div>
-        <div class="form-group">
+        <div class="form-group mb-3">
           <label for="password">Пароль</label>
-          <input type="password" id="password" name="password" required />
+          <input
+            type="password"
+            id="password"
+            name="password"
+            class="form-control"
+            required
+          />
         </div>
-
-        <div class="d-grid gap-2 col-6 mx-auto">
-          <button type="submit" class="btn btn-primary text">
+        <div class="d-grid">
+          <button type="submit" class="btn btn-primary">
             Зарегистрировать
           </button>
         </div>
       </form>
     </div>
+
+    <!-- Модальное окно -->
+    <div
+      class="modal fade"
+      id="infoModal"
+      tabindex="-1"
+      aria-labelledby="infoModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="infoModalLabel">Сообщение</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Закрыть"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <!-- Сообщение выводится сюда -->
+            <p id="modalMessage"></p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Закрыть
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
+    <script>
+      // Читаем параметры из URL
+      const urlParams = new URLSearchParams(window.location.search);
+      const successMessage = urlParams.get("success");
+      const errorMessage = urlParams.get("error");
+
+      // Если есть сообщение об успехе или ошибке, показываем модальное окно
+      if (successMessage || errorMessage) {
+        const modalMessage = document.getElementById("modalMessage");
+        const modal = new bootstrap.Modal(document.getElementById("infoModal"));
+
+        if (successMessage) {
+          modalMessage.textContent = successMessage;
+          modalMessage.classList.add("text-success");
+        } else if (errorMessage) {
+          modalMessage.textContent = errorMessage;
+          modalMessage.classList.add("text-danger");
+        }
+
+        modal.show();
+      }
+    </script>
   </body>
 </html>
